--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     </title>
 
-    <link rel="stylesheet" type="text/css" href="css.css"
+    <link rel="stylesheet" type="text/css" href="css.css">
   </head>
 
   <body>
